show comments and ratings of picturebooks

--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
-            tools:listitem="@layout/archive_row_item" />
+            tools:listitem="@layout/explore_row_item" />
 
     </ScrollView>
 
