--- a/app/src/main/res/layout/activity_write_review.xml
+++ b/app/src/main/res/layout/activity_write_review.xml
@@ -71,8 +71,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Type review..."
-        android:gravity="top"
-        android:minHeight="100dp"
+        android:gravity="bottom"
+        android:minHeight="50dp"
         android:padding="10dp"
         android:layout_margin="20dp"/>
 
@@ -83,5 +83,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_done_24"
-        android:layout_margin="5dp"/>
+        android:layout_margin="20dp"/>
 </RelativeLayout>
