--- a/app/src/main/res/layout/activity_explore_single_picturebook.xml
+++ b/app/src/main/res/layout/activity_explore_single_picturebook.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:weightSum="1"
-    android:orientation="vertical"
     tools:context=".explore.ExploreSinglePicturebook">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.2">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_margin="10dp">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <TextView
             android:id="@+id/textViewTitleWord"
@@ -37,7 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:numStars="5"
-            android:progressTint="@color/teal_200"/>
+            android:progressTint="@color/teal_200"
+            android:layout_alignParentRight="true" />
 
         <TextView
             android:id="@+id/textViewSummaryWord"
@@ -79,7 +84,7 @@
             android:id="@+id/follow_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textViewSummaryExplore"
+            android:layout_below="@id/textViewStatusExplore"
             android:text="@string/follow"
             android:layout_toRightOf="@id/textViewStatusExplore"
             android:layout_alignParentRight="true" />
@@ -89,17 +94,16 @@
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:background="@color/purple_200"
-        android:adjustViewBounds="true">
+        android:adjustViewBounds="true"
+        android:layout_margin="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewPagesExplore"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black"
             android:scrollbars="horizontal"
             tools:listitem="@layout/picturebook_row_item_explore"
             android:adjustViewBounds="true"/>
@@ -107,9 +111,9 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <ImageButton
             android:id="@+id/addReviews"
@@ -119,24 +123,14 @@
             android:layout_gravity="right"
             android:clickable="true"
             android:src="@drawable/ic_baseline_rate_review_24" />
-        <Button
-            android:id="@+id/buttonDeletePicturebook"
-            android:layout_width="match_parent"
-            android:layout_below="@+id/addReviews"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="100dp"
-            android:padding="5dp"
-            android:text="@string/delete_picture_book" />
 
         <ImageButton
             android:id="@+id/reviewBtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_baseline_star_outline_24"/>
     </RelativeLayout>
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
