--- a/app/src/main/res/layout/activity_write_review.xml
+++ b/app/src/main/res/layout/activity_write_review.xml
@@ -22,7 +22,7 @@
             android:textStyle="bold"/>
     </RelativeLayout>
 
-    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
+    <ImageView
         android:id="@+id/picturebookCover"
         android:layout_below="@+id/reviewRl"
         android:layout_centerHorizontal="true"
@@ -30,9 +30,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/ic_baseline_menu_book_24"
-        app:c_border="true"
-        app:c_border_width="2dp"
-        app:c_border_color="@color/colorPrimary"
+        android:foreground="@drawable/rounded_frame"
         android:layout_gravity="center_horizontal"/>
 
     <TextView
@@ -74,7 +72,8 @@
         android:gravity="bottom"
         android:minHeight="50dp"
         android:padding="10dp"
-        android:layout_margin="20dp"/>
+        android:layout_margin="20dp"
+        android:inputType="textCapSentences"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/submitReview"
@@ -83,5 +82,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_done_24"
-        android:layout_margin="20dp"/>
+        android:layout_margin="20dp"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
