--- a/app/src/main/res/layout/picturebook_row_item_explore.xml
+++ b/app/src/main/res/layout/picturebook_row_item_explore.xml
@@ -6,19 +6,21 @@
     android:layout_weight="1"
     android:layout_gravity="center"
     android:gravity="center"
-    android:background="@color/teal_200"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            card_view:cardCornerRadius="4dp">
+            card_view:cardCornerRadius="4dp"
+            android:layout_margin="5dp">
 
 
                 <ImageView
@@ -27,8 +29,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
-                    android:background="@color/colorAccent"
                     android:scaleType="fitXY" />
+
                 <TextView
                     android:id="@+id/textCaption"
                     android:layout_width="match_parent"
@@ -37,7 +39,7 @@
                     android:layout_gravity="bottom"
                     android:textSize="20sp"
                     android:background="@color/white"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center" />
 
 
 
