--- a/app/src/main/res/layout/activity_show_reviews.xml
+++ b/app/src/main/res/layout/activity_show_reviews.xml
@@ -31,14 +31,16 @@
         android:gravity="center_horizontal"
         android:padding="10dp">
 
-        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
+        <ImageView
             android:id="@+id/coverPicture"
+            android:layout_below="@+id/reviewRl"
+            android:layout_centerHorizontal="true"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/ic_baseline_menu_book_24"
-            app:c_border="true"
-            app:c_border_color="@color/colorPrimary"
-            app:c_border_width="3dp"/>
+            android:foreground="@drawable/rounded_frame"
+            android:layout_gravity="center_horizontal"/>
+
         <TextView
             android:id="@+id/namePicturebook"
             android:layout_width="wrap_content"
