--- a/app/src/main/res/layout/row_review.xml
+++ b/app/src/main/res/layout/row_review.xml
@@ -19,17 +19,18 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginRight="5dp">
 
-            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
+            <ImageView
                 android:id="@+id/profilePicture"
+                android:layout_below="@+id/reviewRl"
+                android:layout_centerHorizontal="true"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="5dp"
                 android:src="@drawable/profile"
-                app:c_border="true"
-                app:c_border_color="@color/colorPrimary"
-                app:c_border_width="1dp"/>
+                android:foreground="@drawable/rounded_frame"
+                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/nameProfile"
@@ -47,7 +48,8 @@
             android:layout_height="wrap_content"
             android:numStars="5"
             android:layout_below="@+id/profileLL"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:id="@+id/dateTV"
@@ -56,7 +58,8 @@
             android:layout_below="@+id/profileLL"
             android:layout_toEndOf="@+id/ratingBar3"
             android:text="dd/MM/yyyy"
-            android:textSize="12sp"/>
+            android:textSize="12sp"
+            android:layout_toRightOf="@+id/ratingBar3" />
 
         <TextView
             android:id="@+id/reviewText"
