--- a/app/src/main/res/layout/activity_pending_picturebooks.xml
+++ b/app/src/main/res/layout/activity_pending_picturebooks.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".explore.Explore">
+    tools:context=".admin.PendingPicturebooks">
 
     <SearchView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:id="@+id/search_bar_explore"
+        android:id="@+id/search_bar_admin"
         android:queryHint="Search..."
         android:iconifiedByDefault="false"/>
 
@@ -22,15 +22,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"
-        tools:context=".explore.Explore">
+        tools:context=".admin.PendingPicturebooks">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewExplore"
+            android:id="@+id/recyclerViewAdmin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
-            tools:listitem="@layout/explore_row_item" />
+            tools:listitem="@layout/admin_row_item" />
 
     </ScrollView>
 
 </LinearLayout>
+
+
