--- a/app/src/main/res/layout/picturebook_row_item.xml
+++ b/app/src/main/res/layout/picturebook_row_item.xml
@@ -8,6 +8,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_width="200dp"
         android:layout_height="200dp"
         card_view:cardCornerRadius="4dp">
@@ -15,7 +16,8 @@
         <ImageView
             android:id="@+id/imageViewPage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
