--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        app:srcCompat="@android:drawable/ic_popup_reminder" />
+        android:background="@null"
+        android:layout_margin="5dp"
+        app:srcCompat="@drawable/ic_baseline_settings_24" />
 
     <ImageView
         android:id="@+id/imageButtonProfile"
@@ -57,6 +59,15 @@
             android:layout_marginTop="10dp"
             android:text="@string/explore"
             android:layout_below="@+id/buttonArchive"/>
+
+        <Button
+            android:id="@+id/buttonPending"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Pending Picturebooks"
+            android:layout_below="@+id/buttonExplore"
+            android:visibility="invisible"/>
 
     </RelativeLayout>
 
